# compliance-ci

./: .gitignore  CODEBASE_INDEX.md
.github/workflows/: compliance-ci.yml
backend/: TODO-1.md  TODO-2.md  TODO-3.md  TODO-4.md  TODO-5.md  TODO-6.md  TODO-7.md  pyproject.toml  requirements.txt  spec.md
backend/app/: __init__.py  api.py  ci.py  ci_integration.py  corpus_parser.py  evaluator.py  fusion.py  llm_adapter.py  parser.py  rate_limiter.py  reevaluation.py  schemas.py  storage.py  vector_retriever.py
backend/features/: crypto.yaml  risky-payments.yaml  sample-corpus-example.yaml
backend/scripts/: __init__.py  run_ci_check.py
backend/tests/: test_api_evaluate_pr.py  test_api_read_endpoints.py  test_ci_integration.py  test_ci_policy.py  test_corpus_upload.py  test_evaluator.py  test_fusion.py  test_llm_adapter.py  test_reevaluation.py  test_run_ci_check.py  test_schema_validation.py  test_storage.py  test_workflow_config.py
frontend/: TODO-BACKEND-FRONTEND.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/corpus/: page.tsx
frontend/src/app/evaluations/: page.tsx
frontend/src/app/features/: page.tsx
frontend/src/components/charts/: ComplianceTimeline.tsx  GitBranchTimeline.tsx  RiskDistributionChart.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  ThemeProvider.tsx  TopBar.tsx
frontend/src/components/pages/: CorpusContent.tsx  (+4 more)
frontend/src/data/: corpus-versions.json  evaluations.json  features.json  reevaluation-results.json
frontend/src/lib/: data.ts  mock.ts  types.ts  utils.ts
(+9 files in other folders)
