[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-ci-backend"
version = "0.1.0"
description = "Compliance CI backend MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "groq>=0.11.0",
  "httpx>=0.28.0",
  "pgvector>=0.3.4",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "sentence-transformers>=3.0.0",
  "torch>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
